--- a/package.json
+++ b/package.json
@@ -18,7 +18,9 @@
     "express": "^5.1.0",
     "express-session": "^1.18.1",
     "jsonwebtoken": "^9.0.2",
+    "mongodb": "6.7",
     "mongoose": "^8.15.0",
+    "nodejs": "^0.0.0",
     "nodemon": "^3.1.10",
     "stripe": "^18.5.0"
   }
